Tweaks in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempora assumenda possimus! Itaque, quam nam?
+    Quam asperiores officiis natus! Repellendus aliquam, ducimus porro quos pariatur mollitia error eveniet
+    reprehenderit quod.</p>
 
   <!-- Header / Navbar -->
   <header class="position-sticky top-0">
