--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap v5.3 -->
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles/style.css">
@@ -16,9 +16,9 @@
 
   <!-- Header / Navbar -->
   <header class="position-sticky top-0">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand" href="#"><b>BR</b> Architects</a>
+    <nav class="navbar navbar-expand-md bg-white box-shadow">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-3" href="index.html"><strong>BR</strong> Architect</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#projects-section">Projects</a>
+              <a class="nav-link list-group-item-action" href="#projects-section">Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-3">
               <a class="nav-link" href="#about-section">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#contact-section">Contact</a>
+            <li class="nav-item me-3">
+              <a class="nav-link" href="#contact-section">Contact</a>
             </li>
           </ul>
         </div>
@@ -224,8 +224,7 @@
   </footer>
 
   <!-- Bootstrap JS Link -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
-  ">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
