--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Bootstrap v5.3 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -13,9 +14,10 @@
 </head>
 
 <body>
+
   <!-- Header / Navbar -->
   <header class="position-sticky top-0">
-    <nav class="navbar navbar-expand-md bg-white box-shadow">
+    <nav class="navbar navbar-expand-md bg-white">
       <div class="container-fluid">
         <a class="navbar-brand ms-3" href="index.html"><strong>BR</strong> Architect</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -45,8 +47,8 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1 class="text-white text-center"><span id="br-text" class="d-inline-block">BR</span><span
-                id="a-text">Architect</span></h1>
+            <h1 class="text-white text-center"><span id="br-text" class="d-inline-block">BR</span><span id="a-text"
+                class="fw-400">Architect</span></h1>
           </div>
         </div>
       </div>
@@ -143,7 +145,7 @@
               <img src="./assets/images/team1.jpg" alt="Team Member">
               <h4 class="mb-0 mt-3">Jane Doe</h4>
               <p class="text-secondary my-3">Architect</p>
-              <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
+              <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesqu69e elementum.</p>
               <button class="btn btn-light">Contact</button>
             </div>
           </div>
@@ -167,7 +169,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
 
     <!-- Contact Section -->
