Made changes in index.html & style.css

--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
   <header class="position-sticky top-0">
     <nav class="navbar navbar-expand-md bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="index.html"><strong>BR</strong> Architect</a>
+        <a class="navbar-brand ms-3 border-0 width-auto" href="index.html"><strong>BR</strong>
+          Architect</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link list-group-item-action" href="#projects-section">Projects</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="#about-section">About</a>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 list-group border-0">
+            <li class="nav-item me-3">
+              <a class="nav-link list-group-item list-group-item-action border-0" href="#projects-section">Projects</a>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#contact-section">Contact</a>
+              <a class="nav-link list-group-item list-group-item-action border-0" href="#about-section">About</a>
+            </li>
+            <li class="nav-item me-3">
+              <a class="nav-link list-group-item list-group-item-action border-0" href="#contact-section">Contact</a>
             </li>
           </ul>
         </div>
@@ -43,19 +44,19 @@
   <main>
 
     <!-- Hero Section -->
-    <div id="hero-section" class="d-flex align-items-center">
+    <div id="hero-section" class="d-flex align-items-center mb-4">
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1 class="text-white text-center"><span id="br-text" class="d-inline-block">BR</span><span id="a-text"
-                class="fw-400">Architect</span></h1>
+            <h1 class="text-white text-center"><span id="br-text" class="d-inline-block text-light">BR</span>&ensp;<span
+                id="a-text" class="text-light">Architects</span></h1>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Project Section -->
-    <div id="projects-section" class="py-5">
+    <div id="projects-section" class="pt-5 pb-4">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -117,7 +118,7 @@
     </div>
 
     <!-- About Section -->
-    <div id="about-section" class="py-5">
+    <div id="about-section" class="pb-5 pt-4">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -137,7 +138,7 @@
               <h4 class="mb-0 mt-3">John Doe</h4>
               <p class="text-secondary my-3">CEO &amp; Founder</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
-              <button class="btn btn-light">Contact</button>
+              <button class="btn btn-light rounded-0">Contact</button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -146,7 +147,7 @@
               <h4 class="mb-0 mt-3">Jane Doe</h4>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesqu69e elementum.</p>
-              <button class="btn btn-light">Contact</button>
+              <button class="btn btn-light rounded-0">Contact</button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -155,7 +156,7 @@
               <h4 class="mb-0 mt-3">Mike Ross</h4>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
-              <button class="btn btn-light">Contact</button>
+              <button class="btn btn-light rounded-0">Contact</button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -164,7 +165,7 @@
               <h4 class="mb-0 mt-3">Dan Star</h4>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
-              <button class="btn btn-light">Contact</button>
+              <button class="btn btn-light rounded-0">Contact</button>
             </div>
           </div>
         </div>
@@ -185,19 +186,19 @@
         <div class="row mt-3">
           <form>
             <div class="col-12 mb-3">
-              <input type="text" name="name" class="form-control" placeholder="Name">
+              <input type="text" name="name" class="form-control rounded-0" placeholder="Name">
             </div>
             <div class="col-12 mb-3">
-              <input type="email" name="email" class="form-control" placeholder="Email">
+              <input type="email" name="email" class="form-control rounded-0" placeholder="Email">
             </div>
             <div class="col-12 mb-3">
-              <input type="text" name="subject" class="form-control" placeholder="Subject">
+              <input type="text" name="subject" class="form-control rounded-0" placeholder="Subject">
             </div>
             <div class="col-12 mb-3">
-              <input type="text" name="comment" class="form-control" placeholder="Comment">
+              <input type="text" name="comment" class="form-control rounded-0" placeholder="Comment">
             </div>
             <div class="col-12">
-              <button class="btn btn-dark">Send Message</button>
+              <button class="btn btn-dark rounded-0">Send Message</button>
             </div>
           </form>
         </div>
