--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap v5.3 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/afcfb484c6.js" crossorigin="anonymous"></script>
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles/style.css">
   <title>BR Architects (Responsive)</title>
@@ -20,7 +23,7 @@
     <nav class="navbar navbar-expand-md bg-white">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 border-0 width-auto" href="index.html"><strong>BR</strong>
-          Architect</a>
+          Architects</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,7 +63,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h3>Projects</h3>
+            <h4 class="shadow">Projects</h4>
             <hr>
           </div>
         </div>
@@ -122,7 +125,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h3>About</h3>
+            <h4 class="shadow">About</h4>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quis id qui dignissimos expedita
               rerum placeat unde numquam eaque est corporis nostrum laborum atque, blanditiis, dolor consequuntur.
@@ -135,7 +138,11 @@
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card mb-3 mb-lg-0 border-0">
               <img src="./assets/images/team2.jpg" alt="Team Member">
-              <h4 class="mb-0 mt-3">John Doe</h4>
+              <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover"
+                href="john.html">
+                <h4 class="mb-0 mt-3">John Doe</h4>
+              </a>
+
               <p class="text-secondary my-3">CEO &amp; Founder</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
               <button class="btn btn-light rounded-0">Contact</button>
@@ -144,7 +151,10 @@
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card mb-3 mb-lg-0 border-0">
               <img src="./assets/images/team1.jpg" alt="Team Member">
-              <h4 class="mb-0 mt-3">Jane Doe</h4>
+              <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover"
+                href="john.html">
+                <h4 class="mb-0 mt-3">Jane Doe</h4>
+              </a>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesqu69e elementum.</p>
               <button class="btn btn-light rounded-0">Contact</button>
@@ -153,7 +163,10 @@
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card mb-3 mb-lg-0 border-0">
               <img src="./assets/images/team3.jpg" alt="Team Member">
-              <h4 class="mb-0 mt-3">Mike Ross</h4>
+              <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover"
+                href="john.html">
+                <h4 class="mb-0 mt-3">Mike Rose</h4>
+              </a>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
               <button class="btn btn-light rounded-0">Contact</button>
@@ -162,7 +175,10 @@
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card border-0">
               <img src="./assets/images/team4.jpg" alt="Team Member">
-              <h4 class="mb-0 mt-3">Dan Star</h4>
+              <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover"
+                href="john.html">
+                <h4 class="mb-0 mt-3">Dan Star</h4>
+              </a>
               <p class="text-secondary my-3">Architect</p>
               <p>Phaseluss eget enim eu lectus faucibus vestibulum. Suspenisse sodale pellentesque elementum.</p>
               <button class="btn btn-light rounded-0">Contact</button>
@@ -177,7 +193,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h3>Contact</h3>
+            <h4 class="shadow">Contact</h4>
             <hr>
             <p>Lets get in touch and talk about your next Project.</p>
           </div>
@@ -197,8 +213,27 @@
             <div class="col-12 mb-3">
               <input type="text" name="comment" class="form-control rounded-0" placeholder="Comment">
             </div>
-            <div class="col-12">
-              <button class="btn btn-dark rounded-0">Send Message</button>
+            <div class="col-12" id="social-div">
+              <div id="box">
+                <button class="btn btn-dark rounded-0">Send Message</button>
+              </div>
+              <div id="box2">
+                <span>
+                  <a href="contact-section"><i class="fa-brands fa-square-twitter"></i></a>
+                </span>
+                <span>
+                  <a href="contact-section"><i class="fa-brands fa-square-facebook"></i></a>
+                </span>
+                <span>
+                  <a href="contact-section"><i class="fa-brands fa-facebook-messenger"></i></a>
+                </span>
+                <span>
+                  <a href="contact-section"><i class="fa-brands fa-square-youtube"></i></a>
+                </span>
+                <span>
+                  <a href="contact-section"><i class="fa-brands fa-square-whatsapp"></i></i></a>
+                </span>
+              </div>
             </div>
           </form>
         </div>
@@ -217,7 +252,7 @@
       <div class="row">
         <div class="col">
           <p class="text-white text-center mb-0">
-            &copy; 2024. All Rights Reserved.
+            &copy; 2024. All Rights Reserved. Powered by <span><a href="https://www.w3schools.com/">w3.CSS</a></span>
           </p>
         </div>
       </div>
