--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card border-0">
-              <span class="bg-black text-white position-absolute py-2 px-3">Renovated House</span>
+              <span class="bg-black text-white position-absolute py-2 px-3">Renovated</span>
               <img src="./assets/images/house3.jpg" alt="House">
             </div>
           </div>
@@ -100,25 +100,25 @@
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card border-0">
               <span class="bg-black text-white position-absolute py-2 px-3">Summer House</span>
-              <img src="./assets/images/house5.jpg" alt="House">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-3">
-            <div class="card border-0">
-              <span class="bg-black text-white position-absolute py-2 px-3">Brick House</span>
               <img src="./assets/images/house2.jpg" alt="House">
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card border-0">
-              <span class="bg-black text-white position-absolute py-2 px-3">Renovated House</span>
-              <img src="./assets/images/house3.jpg" alt="House">
+              <span class="bg-black text-white position-absolute py-2 px-3">Brick House</span>
+              <img src="./assets/images/house5.jpg" alt="House">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="card border-0">
+              <span class="bg-black text-white position-absolute py-2 px-3">Renovated</span>
+              <img src="./assets/images/house4.jpg" alt="House">
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card border-0">
               <span class="bg-black text-white position-absolute py-2 px-3">Barn House</span>
-              <img src="./assets/images/house4.jpg" alt="House">
+              <img src="./assets/images/house3.jpg" alt="House">
             </div>
           </div>
         </div>
